--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="scripts.js"></script>
 </head>
 <body>
-	<form action="" method="GET" class="js-timerApp">
+	<form action="" method="GET" class="js-pomodoroTimer">
 		<input type="number" name="timeInSeconds" id="timeInSeconds" min="0" />
 		<button type="button" id="js-startBtn" >Start</button>
 		<button type="button" id="js-pauseBtn" >Pause</button>
