working on refactoring timer functionality using babel and ES6 classes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pomodoro Timer</title>
-  <script src="scripts.js"></script>
+  <script src="lib/index.js"></script>
 </head>
 <body>
 	<form action="" method="GET" class="js-pomodoroTimer">
